--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,297 +1,88 @@
-@charset "utf-8";
-/* custom properties
----------------------------------------------------------------------------- */
-:root {
-  --line-color: #333;
-  
-  --print-bold-line: 1mm solid var(--line-color);
-  --print-defult-line: 0.2mm solid var(--line-color);
-  --print-middle-line: 0.6mm solid var(--line-color);
-
-  
-
-  --vsmarl-font-size: 8pt;
-  --smarl-font-size: 9pt;
-  --defult-font-size: 12pt;
-  --middle-font-size: 14pt;
-  --large-font-size: 17pt;
-
-  
-}
-* {
-  /* outline: 0.1px dotted red; */
-}
 /* reset
 ---------------------------------------------------------------------------- */
-html, body, h1, h2, h3,  ul, li, dl, dt, dd {
+html, body, h1, h2, h3, ul, li, dl, dt, dd {
   margin: 0;
   padding: 0;
   line-height: 1.0;
 }
+
 p {
   margin: 0;
   padding: 0;
 }
+
 ul {
   list-style: none;
 }
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
 img {
   vertical-align: bottom;
   max-width: 100%;
   height: auto;
 }
-/*  (B5サイズとは182mm×257; 余白: 左右17mm: 上下:16mm）
+
+/* page styleing
 ---------------------------------------------------------------------------- */
-/* common
--------------------------------------------------------- */
-/* header
--------------------------------------------------------- */
-header {
-  display: none;
+html, body {
+  scroll-behavior: smooth;
 }
-/* main
--------------------------------------------------------- */
-main {
-  display: grid;
-  width: 257mm;
-  grid-template-columns: 182mm 182mm;
-  /* grid-template-columns: repeat(182mm); */
-}
-main * {
+
+body * {
   box-sizing: border-box;
 }
-.page {
-  width: 100%;
-  height: 257mm;
-  padding: 16mm 17mm;
-  position: relative;
-}
-p {
-  font-size: var(--defult-font-size);
-}
-p.input-field {
-  text-align: center;
-} 
-/* left-page
------------------------------------- */
-/* resume-header
----------------- */
-#resume-header {
-  height: 8mm;
-  padding: 1mm;
-  width: 113mm;
-  display: grid;
-  grid-template-columns: 30mm 81mm;
-}
-#resume-header>h1 {
-  height: 6mm;
-  font-size: var(--large-font-size);
-}
-#creataion-date {
-  height: 6mm;
-  display: grid;
-  grid-template-columns: 10mm 4mm 5mm 4mm 5mm 14mm;
-  column-gap: 1mm;
-  justify-self: end;
-  align-items:center;
-}
-#creataion-date>p.label {
-  height: 6mm;
-  line-height: 6mm;
-  text-align: center;
-  font-size: var(--smarl-font-size);
-}
-#creataion-date>p.input-field {
-  height: 6mm;
-  line-height: 6mm;
-  text-align: right;
-  font-size: var(--smarl-font-size);
-}
-/* id-photo
----------------- */
-#id-photo {
-  position: absolute;
-  top : 16mm;
-  left: 133mm;
-  width: 27mm;
-  height: 36mm;
-  padding: 2mm;
-  border: 1px dotted #333;
-}
-#id-photo>p {
-  font-size: var(--smarl-font-size);
-  line-height: 1.2em;
-  text-align: center;
-  margin-bottom: 1.5em;
-}
-#id-photo>p:last-of-type {
-  font-size: var(--vsmarl-font-size);
-}
-/* personal-data
----------------- */
-/* basic-data */
-#basic-data{
-  width: 113mm;
-  height: 21mm;
-  display: grid; /* カラムを細かく刻む必要はない */
-  grid-template-columns: 18.5mm 74mm 18.5mm;
-  grid-template-rows: repeat(3, 6.5mm);
-  border-top: var(--print-bold-line);
-  border-left: var(--print-bold-line);
-  border-right: var(--print-bold-line);
-}
-#name-furigana {
-  font-size: var(--defult-font-size);
-  line-height: 6.5mm;
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-  border-bottom: var(--print-defult-line);
-}
-#name {
-  line-height: 13mm;
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 4;
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-}
-#name>p.input-field {
-  font-size: var(--large-font-size);
-}
-#gender {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 4;
-  display: grid;
-  grid-template-columns: 1fr;
-  align-items: center;
-  text-align: center;
-  border-left: var(--print-defult-line);
-}
-/* birthday */
-#birthday{
-  width: 113mm;
-  height: 6.5mm;
-  display: grid;
-  grid-template-columns: 19mm 20mm 5mm 7mm 5mm 7mm 18mm 10mm 11mm;
-  column-gap: 1mm;
-  justify-self: end;
-  align-items: center;
-  border-top: var(--print-defult-line);
-  border-left: var(--print-bold-line);
-  border-right: var(--print-bold-line);
-}
-#birthday .label{
-  text-align: center;
-}
-#birthday .input-field {
-  text-align: right;
-}
-/* contact-info */
-#contact-info {
-  width: 148mm;
-  display: grid;
-  grid-template-columns: repeat(8);
-  grid-template-rows: repeat(3);
-  border-top: var(--print-middle-line);
-  border-left: var(--print-bold-line);
-  border-right: var(--print-bold-line);
-}
-.resides-furigana {
-  width: 113mm;
-  grid-column-start: 1;
-  grid-column-end: 7;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  display: grid;
-  grid-template-columns: 18.5mm 92.5mm;
-  border-right: var(--print-middle-line);
-}
-.postal-code {
-  grid-column-start: 1;
-  grid-column-end: 7;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  display: grid;
-  grid-template-columns: 2fr 1fr 2fr 1fr 2fr 8fr;
-}
-.resides {
-  grid-column-start: 1;
-  grid-column-end: 7;
-  grid-row-start: 3;
-  grid-row-end: 4;
-}
-.phone-number {
-  grid-column-start: 7;
-  grid-column-end: 9;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-}
-/* emergency-contact */
 
-/* education-and-career-history
----------------- */
+header {
+  height: 50px;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  border-bottom: 1px solid #333;
+}
 
-/* right-page
------------------------------------- */
+header menu {
+  display: grid;
+  grid-template-columns: repeat(6 1fr);
+}
 
-/* footer
--------------------------------------------------------- */
-footer {
+header input {
   display: none;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-/* for sp
----------------------------------------------------------------------------- */
-@media screen and (max-width: 768px) {
-
+header input:checked + label {
+  background-color: #4BD865;
 }
-/* for printing
----------------------------------------------------------------------------- */
-@media print {
-  /* for A3 size printing
-  ------------------------------------------------------ */
-  .print_pages_A3 {
-    size: A4 landscape;
-    page-break-before: always;
-  }
-  /* for A4 size printing
-  ------------------------------------------------------ */
-  .print_pages_A4 {
-    size: A4 portrait;
-    page-break-before: always;
-  }
-  /* for A5 size printing (B5サイズとは182mm×257; 余白: 左右17mm: 上下:16mm）
-  ------------------------------------------------------ */
-  .print_pages_B5 {
-    size: B5 portrait;
-    page-break-before: always;
-  }
-}
-@media print {
 
+header input:checked + label::after {
+  left: 22px;
 }
+
+header label {
+  width: 50px;
+  height: 28px;
+  background-color: #ccc;
+  position: relative;
+  display: inline-block;
+  border-radius: 30px;
+  transition: 0.4s;
+  box-sizing: border-box;
+}
+
+header label::after {
+  content: '';
+  position: absolute;
+  width: 28px;
+  height: 28px;
+  border-radius: 100%;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  transition: 0.4s;
+  cursor: pointer;
+}
+/*# sourceMappingURL=style.css.map */
