--- a/template/sass/style.scss
+++ b/template/sass/style.scss
@@ -1,6 +1,8 @@
 @import "reset";
 @import "variable";
-
+// * {
+//   outline: 1px solid red;
+// }
 /* page styleing
 ---------------------------------------------------------------------------- */
 html, body {
@@ -12,49 +14,169 @@ body {
   }
 }
 header {
+  width: 100%;
   height: 50px;
+  padding: 0 10px;
+  margin-bottom: 10px;
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 300px 1fr;
+  align-items: bottom;
   border-bottom: 1px solid #333;
-
-  menu {
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  .menu {
     display: grid;
-    grid-template-columns: repeat(6 1fr);
-  }
-
-  input {
-    display: none;
-    &:checked {
-      +label {
-        background-color: #4BD865;
-        &::after {
-          left: 22px;
+    grid-template-columns: repeat(auto-fill, 40px);
+    column-gap: 10px;
+    grid-auto-flow: column;
+    justify-items: center;
+    justify-self: end;
+    align-items: center;
+    .editing-switch {
+      width: 40px;
+      height: 40px;
+      input {
+        display: none;
+        &:checked {
+          +label {
+            background-color: #4BD865;
+            &::before {
+              content: 'edit';
+            }
+            &::after {
+              left: 22px;
+            }
+          }
         }
       }
+      label {
+        width: 40px;
+        height: 20px;
+        background-color: #ccc;
+        position:relative;
+        top: 20px;
+        display: inline-block;
+        border-radius: 20px;
+        transition: 0.4s;
+        box-sizing: border-box;
+        text-align: center;
+        &::before{
+          content: 'done';
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: -20px;
+          font-size: 14px;
+          text-align: center;
+        }
+        &::after {
+          content: '';
+          position: absolute;
+          left: 0;
+          right: 0;
+          width: 20px;
+          height: 20px;
+          border-radius: 100%;
+          z-index: 2;
+          background-color: #fff;
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+          transition: 0.4s;
+          cursor: pointer;
+        }
+      } 
     }
-  }
-  label {
-    width: 50px;
-    height: 28px;
-    background-color: #ccc;
-    position:relative;
-    display: inline-block;
-    border-radius: 30px;
-    transition: 0.4s;
-    box-sizing: border-box;
-    &::after {
-      content: '';
-      position: absolute;
-      width: 28px;
-      height: 28px;
-      border-radius: 100%;
-      left: 0;
-      right: 0;
-      z-index: 2;
-      background-color: #fff;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-      transition: 0.4s;
+    button {
+      width: 40px;
+      height: 40px;
       cursor: pointer;
     }
-  }  
+  }
+}
+// 履歴書（B5サイズ: 182mm×257mm x 2（左右ページ合わせてB4:364mmx257mm）, 余白: 上下左右17mm）
+// 履歴書（A4サイズ: 210mm×297mm x 2（左右ページ合わせてA3:420mmx297mm）, 余白: 上下左右17mm）
+main {
+  #resume {
+    width: 364mm;
+    margin: 60px 10px 10px;
+    display: grid;
+    grid-template-columns: 182mm 182mm;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    .page {
+      width: 182mm;
+      height: 257mm;
+      padding: 17mm;
+    }
+    #left-page {
+      position: relative;
+      #resume-header {
+        width: 148mm;
+        height: 7.5mm;
+        display: grid;
+        grid-template-columns: 35mm 78mm 35mm;
+        align-items: center;
+        h2 {
+          font-size: 17pt;
+          text-align: center;
+        }
+        #creataion-date {
+          display: grid;
+          grid-template-columns: 15mm 3mm 5.5mm 3mm 5.5mm 9mm;
+          justify-self: end;
+          p {
+            font-size: 8pt;
+            text-align: center;
+            &.input-field {
+              text-align: right;
+            }
+          }
+        }
+      }
+      #id-photo {
+        width: 30mm;
+        height: 40mm;
+        position: absolute;
+        top: 0;
+        right: 0;
+        border: $print-line-default;
+      }
+    }
+    .education-and-career-history {
+
+      .resume-line {
+        width: 148mm;
+        height: 7.5mm;
+        display: grid;
+        grid-template-columns: 22.5mm 12.5mm 111mm; // 両脇枠線分2mm引き
+        text-align: center;
+        border: {
+          left: $print-line-bold;
+          right: $print-line-bold;
+          bottom: $print-line-default ;
+        }
+        p {
+          border: {
+            right: $print-line-default ;
+          }
+          &:last-of-type {
+            border: {
+              right: none;
+            }
+          }
+        }
+      }
+      .resume-line-header {
+
+      }
+
+    }
+    #right-page {
+
+    }
+  }
+}
+footer {
+  height: 50px;
+  text-align: center;
 }
