--- a/template/index.html
+++ b/template/index.html
@@ -9,8 +9,8 @@
     1. CSS定義用の雛形のHMTLを作る           4/28
     2. CSS定義(@media print A4, B5)       5/1
     3. JS 要素生成のロジックを考え決める(MVC?) 5/1
-    4. JS オブジェクト定義                  5/1
-    5. JS コーディング                     5/1, 5/2
+    4. JS オブジェクト定義                  5/2
+    5. JS コーディング                     5/2
     6. テスト                             5/2
     7. CSS定義(スマートフォン対応)           5/3
     8. GitHub Pagesへ実装、GitHubコード公開 5/4
