--- a/template/sass/_variable.scss
+++ b/template/sass/_variable.scss
@@ -2,3 +2,4 @@ $line-color : #000;
 
 $print-line-bold: 1mm solid $line-color;
 $print-line-default: 0.2mm solid $line-color;
+$print-line-double: 1mm double $line-color;
