--- a/template/css/style.css
+++ b/template/css/style.css
@@ -126,6 +126,10 @@ header .menu button {
   cursor: pointer;
 }
 
+main {
+  font-size: 11pt;
+}
+
 main #resume {
   width: 364mm;
   margin: 60px 10px 10px;
@@ -137,7 +141,7 @@ main #resume {
 main #resume .page {
   width: 182mm;
   height: 257mm;
-  padding: 17mm;
+  padding: 14mm 17mm;
 }
 
 main #resume #left-page {
@@ -146,7 +150,8 @@ main #resume #left-page {
 
 main #resume #left-page #resume-header {
   width: 148mm;
-  height: 7.5mm;
+  height: 7.3mm;
+  margin-top: 1mm;
   display: grid;
   grid-template-columns: 35mm 78mm 35mm;
   align-items: center;
@@ -173,17 +178,180 @@ main #resume #left-page #resume-header #creataion-date p.input-field {
 }
 
 main #resume #left-page #id-photo {
-  width: 30mm;
-  height: 40mm;
+  width: 28mm;
+  height: 36.5mm;
+  padding: 10pt;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 14mm;
+  right: 21mm;
   border: 0.2mm solid #000;
+}
+
+main #resume #left-page #id-photo p {
+  font-size: 8pt;
+  text-align: center;
+  line-height: 10pt;
+  margin-bottom: 10pt;
+}
+
+main #resume #left-page #personal-data #basic-data {
+  display: grid;
+  grid-template-columns: 94mm 19mm 35mm;
+}
+
+main #resume #left-page #personal-data #basic-data #name-furigana {
+  height: 7.3mm;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  display: grid;
+  grid-template-columns: 15mm 79mm;
+  border-top: 1mm solid #000;
+  border-right: 0.2mm solid #000;
+  border-bottom: 0.2mm solid #000;
+  border-left: 1mm solid #000;
+}
+
+main #resume #left-page #personal-data #basic-data #name-furigana .label {
+  grid-column: 1 / 2;
+  font-size: 9pt;
+}
+
+main #resume #left-page #personal-data #basic-data #name-furigana .input-field {
+  grid-column: 2 / 3;
+  font-size: 9pt;
+}
+
+main #resume #left-page #personal-data #basic-data #name {
+  height: 15mm;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 15mm 79mm;
+  border-right: 0.2mm solid #000;
+  border-bottom: 0.2mm solid #000;
+  border-left: 1mm solid #000;
+}
+
+main #resume #left-page #personal-data #basic-data #name .label {
+  grid-column: 1 / 2;
+}
+
+main #resume #left-page #personal-data #basic-data #name .input-field {
+  grid-column: 2 / 3;
+}
+
+main #resume #left-page #personal-data #basic-data #gender {
+  grid-row: 1 / 3;
+  grid-column: 2 / 3;
+  border-top: 1mm solid #000;
+  border-right: 1mm solid #000;
+  border-bottom: 0.2mm solid #000;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  text-align: center;
+}
+
+main #resume #left-page #personal-data #basic-data #gender p {
+  text-align: center;
+}
+
+main #resume #left-page #personal-data #birthday {
+  display: grid;
+  grid-template-columns: 19mm 94mm 35mm;
+}
+
+main #resume #left-page #personal-data #birthday > .label {
+  grid-column: 1 / 2;
+  height: 7.3mm;
+  width: 19mm;
+  border-bottom: 0.2mm solid #000;
+  border-left: 1mm solid #000;
+}
+
+main #resume #left-page #personal-data #birthday .date {
+  grid-column: 2 / 3;
+  height: 7.3mm;
+  width: 94mm;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 30mm 5mm 9mm 5mm 9mm 16mm 9mm 10mm;
+  border-right: 1mm solid #000;
+  border-bottom: 0.2mm solid #000;
+}
+
+main #resume #left-page #personal-data #contact-info,
+main #resume #left-page #personal-data #emergency-contact {
+  display: grid;
+  grid-template-columns: 19mm 94mm 35mm;
+  grid-template-rows: 7.3mm 6mm 9mm;
+}
+
+main #resume #left-page #personal-data #contact-info .resides-furigana,
+main #resume #left-page #personal-data #emergency-contact .resides-furigana {
+  grid-row: 1 / 2;
+  grid-column: 1 / 3;
+  border-right: 0.2mm solid #000;
+  border-bottom: 0.2mm solid #000;
+  border-left: 1mm solid #000;
+  display: grid;
+  grid-template-columns: 18mm 94mm;
+}
+
+main #resume #left-page #personal-data #contact-info .postal-code,
+main #resume #left-page #personal-data #emergency-contact .postal-code {
+  grid-row: 2 / 3;
+  grid-column: 1 / 3;
+  border-right: 0.2mm solid #000;
+  border-left: 1mm solid #000;
+  display: grid;
+  grid-template-columns: 18mm 9mm 12mm 5mm 16mm 5mm;
+}
+
+main #resume #left-page #personal-data #contact-info .resides,
+main #resume #left-page #personal-data #emergency-contact .resides {
+  grid-row: 3 / 4;
+  grid-column: 1 / 3;
+  font-size: 11pt;
+  border-right: 0.2mm solid #000;
+  border-bottom: 0.2mm solid #000;
+  border-left: 1mm solid #000;
+}
+
+main #resume #left-page #personal-data #contact-info .phone-number,
+main #resume #left-page #personal-data #emergency-contact .phone-number {
+  grid-row: 1 / 2;
+  grid-column: 3 / 4;
+  border-top: 1mm solid #000;
+  border-right: 1mm solid #000;
+  border-bottom: 0.2mm solid #000;
+  display: grid;
+  grid-template-columns: 9mm 25mm;
+}
+
+main #resume #left-page #personal-data #contact-info .e-mail,
+main #resume #left-page #personal-data #emergency-contact .e-mail {
+  grid-row: 2 / 4;
+  grid-column: 3 / 4;
+  border-right: 1mm solid #000;
+  border-bottom: 0.2mm solid #000;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 6mm 9mm;
+}
+
+main #resume #left-page #personal-data #emergency-contact .phone-number {
+  border-top: none;
+  border-right: 1mm solid #000;
+}
+
+main #resume #left-page .education-and-career-history .resume-line:last-of-type {
+  border-bottom: 1mm solid #000;
 }
 
 main #resume .education-and-career-history .resume-line {
   width: 148mm;
-  height: 7.5mm;
+  height: 7.3mm;
   display: grid;
   grid-template-columns: 22.5mm 12.5mm 111mm;
   text-align: center;
@@ -192,12 +360,111 @@ main #resume .education-and-career-history .resume-line {
   border-bottom: 0.2mm solid #000;
 }
 
+main #resume .education-and-career-history .resume-line:first-of-type {
+  border-bottom: 1mm double #000;
+}
+
 main #resume .education-and-career-history .resume-line p {
   border-right: 0.2mm solid #000;
 }
 
 main #resume .education-and-career-history .resume-line p:last-of-type {
   border-right: none;
+}
+
+main #resume #right-page .education-and-career-history {
+  margin-top: 8.5mm;
+}
+
+main #resume #right-page .education-and-career-history .resume-line-header {
+  border-top: 1mm solid #000;
+}
+
+main #resume #right-page #qualifications .qualifications-line {
+  width: 148mm;
+  height: 7.3mm;
+  display: grid;
+  grid-template-columns: 22.5mm 12.5mm 111mm;
+  text-align: center;
+  border-left: 1mm solid #000;
+  border-right: 1mm solid #000;
+  border-bottom: 0.2mm solid #000;
+}
+
+main #resume #right-page #qualifications .qualifications-line:first-of-type {
+  border-bottom: 1mm double #000;
+}
+
+main #resume #right-page #qualifications .qualifications-line p {
+  border-right: 0.2mm solid #000;
+}
+
+main #resume #right-page #qualifications .qualifications-line p:last-of-type {
+  border-right: none;
+}
+
+main #resume #right-page #motivation {
+  display: grid;
+  grid-template-columns: 89mm 29mm 30mm;
+  grid-template-rows: repeat(3, 14.6mm);
+}
+
+main #resume #right-page #motivation .label {
+  font-size: 10pt;
+}
+
+main #resume #right-page #motivation #self-promotion {
+  grid-row: 1 / 4;
+  grid-column: 1 / 2;
+  border-right: 0.2mm solid #000;
+  border-bottom: 0.2mm solid #000;
+  border-left: 1mm solid #000;
+}
+
+main #resume #right-page #motivation #commuting-time {
+  grid-row: 1 / 2;
+  grid-column: 2 / 4;
+  border-right: 1mm solid #000;
+  border-bottom: 0.2mm solid #000;
+}
+
+main #resume #right-page #motivation #dependents {
+  grid-row: 2 / 3;
+  grid-column: 2 / 4;
+  border-bottom: 0.2mm solid #000;
+  border-right: 1mm solid #000;
+}
+
+main #resume #right-page #motivation #marital-status {
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
+  border-right: 0.2mm solid #000;
+  border-bottom: 0.2mm solid #000;
+}
+
+main #resume #right-page #motivation #obligation-to-support-spouse {
+  grid-row: 3 / 4;
+  grid-column: 3 / 4;
+  border-right: 1mm solid #000;
+  border-bottom: 0.2mm solid #000;
+}
+
+main #resume #right-page #objective {
+  display: grid;
+  grid-template-columns: 1fr;
+  border-right: 1mm solid #000;
+  border-bottom: 1mm solid #000;
+  border-left: 1mm solid #000;
+}
+
+main #resume #right-page #objective .label {
+  height: 7.3mm;
+  font-size: 10pt;
+  border-bottom: 1mm double #000;
+}
+
+main #resume #right-page #objective .input-field {
+  height: 43.8mm;
 }
 
 footer {
