--- a/template/index.html
+++ b/template/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <!-- Author : bonji@mikuro.net (Shuji Narumi) 
     start: 4/28
-    total: 8h last 5/2
+    total: 10h last 5/2
     Completion : 5/10
   -->
   <!--
@@ -97,11 +97,8 @@
             <div id="gender">
               <p class="input-field">男・女</p>
             </div>
-          </div><!-- #basic-data -->
-          
-          <div id="birthday">
-            <p class="label">生年月日</p>
-            <div class="date">
+            <div id="birthday">
+              <p class="label">生年月日</p>
               <p class="input-field"></p>
               <p class="label">年</p>
               <p class="input-field"></p>
@@ -110,10 +107,9 @@
               <p class="label">日生（満</p>
               <p class="input-field"></p>
               <p class="label">歳）</p>
-              <!-- ↑ keyup　code:13 (リターン), code:9（タブ移動）の時、データをチェックして間違いであればアラート表示 -->
-            </div>
-          </div><!-- /#birthday -->
-  
+            </div><!-- /#birthday -->
+          </div><!-- #basic-data -->
+
           <div id="contact-info">
             <div class="resides-furigana">
               <p class="label">ふりがな</p>
@@ -132,7 +128,7 @@
             </div>
             <div class="phone-number">
               <p class="label">電話</p>
-              <p class="input-field"></p>
+              <p class="input-field" type="number"></p>
             </div>
             <div class="e-mail">
               <p class="label">E-mail</p>
