--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ main .resume .left-page .personal-data .basic-data {
   grid-template-rows: 7.3mm 15mm 7.3mm;
 }
 
-main .resume .left-page .personal-data .basic-data #name-furigana {
+main .resume .left-page .personal-data .basic-data .name-furigana {
   height: 7.3mm;
   grid-column: 1 / 2;
   grid-row: 1 / 2;
@@ -228,17 +228,17 @@ main .resume .left-page .personal-data .basic-data #name-furigana {
   border-left: 1mm solid #000;
 }
 
-main .resume .left-page .personal-data .basic-data #name-furigana p.label {
+main .resume .left-page .personal-data .basic-data .name-furigana p.label {
   grid-column: 1 / 2;
   font-size: 9pt;
 }
 
-main .resume .left-page .personal-data .basic-data #name-furigana p.input-field {
+main .resume .left-page .personal-data .basic-data .name-furigana p.input-field {
   grid-column: 2 / 3;
   font-size: 9pt;
 }
 
-main .resume .left-page .personal-data .basic-data #name {
+main .resume .left-page .personal-data .basic-data .name {
   height: 15mm;
   grid-column: 1 / 2;
   grid-row: 2 / 3;
@@ -249,17 +249,17 @@ main .resume .left-page .personal-data .basic-data #name {
   border-left: 1mm solid #000;
 }
 
-main .resume .left-page .personal-data .basic-data #name p.label {
+main .resume .left-page .personal-data .basic-data .name p.label {
   grid-column: 1 / 2;
 }
 
-main .resume .left-page .personal-data .basic-data #name p.input-field {
+main .resume .left-page .personal-data .basic-data .name p.input-field {
   grid-column: 2 / 3;
   text-align: center;
   font-size: 16pt;
 }
 
-main .resume .left-page .personal-data .basic-data #gender {
+main .resume .left-page .personal-data .basic-data .gender {
   grid-row: 1 / 3;
   grid-column: 2 / 3;
   border-top: 1mm solid #000;
@@ -271,22 +271,22 @@ main .resume .left-page .personal-data .basic-data #gender {
   text-align: center;
 }
 
-main .resume .left-page .personal-data .basic-data #gender p {
+main .resume .left-page .personal-data .basic-data .gender p {
   text-align: center;
 }
 
-main .resume .left-page .personal-data .basic-data #birthday {
+main .resume .left-page .personal-data .basic-data .birthday {
   grid-row: 3 / 4;
   grid-column: 1 / 3;
   border-right: 1mm solid #000;
   border-bottom: 0.2mm solid #000;
   border-left: 1mm solid #000;
   display: grid;
-  grid-template-columns: 19mm 28mm 5mm 9mm 5mm 9mm 18mm 9mm 10mm;
+  grid-template-columns: 19mm 26mm 5mm 9mm 5mm 9mm 18mm 10mm 10mm;
   align-items: center;
 }
 
-main .resume .left-page .personal-data .basic-data #birthday p.input-field {
+main .resume .left-page .personal-data .basic-data .birthday p.input-field {
   text-align: right;
 }
 
@@ -347,7 +347,17 @@ main .resume .left-page .personal-data .emergency-contact .phone-number {
   border-top: 1mm solid #000;
   border-bottom: 0.2mm solid #000;
   display: grid;
-  grid-template-columns: 10mm 24mm;
+  grid-template-columns: 9mm 26mm;
+}
+
+main .resume .left-page .personal-data .contact-info .phone-number p.label,
+main .resume .left-page .personal-data .emergency-contact .phone-number p.label {
+  font-size: 9pt;
+}
+
+main .resume .left-page .personal-data .contact-info .phone-number p.input-field,
+main .resume .left-page .personal-data .emergency-contact .phone-number p.input-field {
+  font-size: 8pt;
 }
 
 main .resume .left-page .personal-data .contact-info .e-mail,
@@ -361,8 +371,15 @@ main .resume .left-page .personal-data .emergency-contact .e-mail {
   grid-template-rows: 6mm 9mm;
 }
 
+main .resume .left-page .personal-data .contact-info .e-mail p.label,
+main .resume .left-page .personal-data .emergency-contact .e-mail p.label {
+  font-size: 9pt;
+}
+
 main .resume .left-page .personal-data .contact-info .e-mail p.input-field,
 main .resume .left-page .personal-data .emergency-contact .e-mail p.input-field {
+  text-align: center;
+  font-size: 8pt;
   height: 9mm;
 }
 
@@ -410,7 +427,7 @@ main .resume .right-page .education-and-career-history .resume-line p {
   line-height: 7.3mm;
 }
 
-main .resume .right-page #qualifications .qualifications-line {
+main .resume .right-page .qualifications .qualifications-line {
   width: 148mm;
   height: 7.3mm;
   display: grid;
@@ -421,29 +438,29 @@ main .resume .right-page #qualifications .qualifications-line {
   border-bottom: 0.2mm solid #000;
 }
 
-main .resume .right-page #qualifications .qualifications-line:first-of-type {
+main .resume .right-page .qualifications .qualifications-line:first-of-type {
   border-bottom: 1mm double #000;
 }
 
-main .resume .right-page #qualifications .qualifications-line p {
+main .resume .right-page .qualifications .qualifications-line p {
   border-right: 0.2mm solid #000;
 }
 
-main .resume .right-page #qualifications .qualifications-line p:last-of-type {
+main .resume .right-page .qualifications .qualifications-line p:last-of-type {
   border-right: none;
 }
 
-main .resume .right-page #motivation {
+main .resume .right-page .motivation {
   display: grid;
   grid-template-columns: 89mm 29mm 30mm;
   grid-template-rows: repeat(3, 14.6mm);
 }
 
-main .resume .right-page #motivation .label {
+main .resume .right-page .motivation .label {
   font-size: 10pt;
 }
 
-main .resume .right-page #motivation #self-promotion {
+main .resume .right-page .motivation .self-promotion {
   grid-row: 1 / 4;
   grid-column: 1 / 2;
   border-right: 0.2mm solid #000;
@@ -451,28 +468,33 @@ main .resume .right-page #motivation #self-promotion {
   border-left: 1mm solid #000;
 }
 
-main .resume .right-page #motivation #commuting-time {
+main .resume .right-page .motivation .self-promotion p.input-field {
+  padding: 1mm;
+  height: 40mm;
+}
+
+main .resume .right-page .motivation .commuting-time {
   grid-row: 1 / 2;
   grid-column: 2 / 4;
   border-right: 1mm solid #000;
   border-bottom: 0.2mm solid #000;
 }
 
-main .resume .right-page #motivation #dependents {
+main .resume .right-page .motivation .dependents {
   grid-row: 2 / 3;
   grid-column: 2 / 4;
   border-bottom: 0.2mm solid #000;
   border-right: 1mm solid #000;
 }
 
-main .resume .right-page #motivation #marital-status {
+main .resume .right-page .motivation #marital-status {
   grid-row: 3 / 4;
   grid-column: 2 / 3;
   border-right: 0.2mm solid #000;
   border-bottom: 0.2mm solid #000;
 }
 
-main .resume .right-page #motivation #obligation-to-support-spouse {
+main .resume .right-page .motivation #obligation-to-support-spouse {
   grid-row: 3 / 4;
   grid-column: 3 / 4;
   border-right: 1mm solid #000;
