--- a/scss/style.scss
+++ b/scss/style.scss
@@ -170,7 +170,7 @@ main {
           display: grid;
           grid-template-columns: 94mm 19mm 35mm;
           grid-template-rows: 7.3mm 15mm 7.3mm;
-          #name-furigana {
+          .name-furigana {
             height: 7.3mm;
             grid-column: 1 / 2;
             grid-row: 1 / 2;
@@ -193,7 +193,7 @@ main {
               }  
             }
           }
-          #name {
+          .name {
             height: 15mm;
             grid-column: 1 / 2;
             grid-row: 2 / 3;
@@ -215,7 +215,7 @@ main {
               }
             }
           }
-          #gender {
+          .gender {
             grid-row: 1 / 3;
             grid-column: 2 / 3;
             border: {
@@ -231,7 +231,7 @@ main {
               text-align: center;
             }
           }
-          #birthday {
+          .birthday {
             grid-row: 3 / 4;
             grid-column: 1 / 3;
             border: {
@@ -240,7 +240,7 @@ main {
               left: $print-line-bold;
             }
             display: grid;
-            grid-template-columns: 19mm 28mm 5mm 9mm 5mm 9mm 18mm 9mm 10mm;          
+            grid-template-columns: 19mm 26mm 5mm 9mm 5mm 9mm 18mm 10mm 10mm;          
             align-items: center;
             p {
               &.input-field {
@@ -305,7 +305,15 @@ main {
               bottom: $print-line-default;
             }
             display: grid;
-            grid-template-columns: 10mm 24mm;
+            grid-template-columns: 9mm 26mm;
+            p {
+              &.label {
+                font-size: 9pt;
+              }
+              &.input-field {
+                font-size: 8pt;
+              }  
+            }
           }
           .e-mail {
             height: 15mm;
@@ -318,9 +326,14 @@ main {
             grid-template-columns: 35mm;
             grid-template-rows: 6mm 9mm;
             p {
-              &.input-field {
-                height: 9mm;
+              &.label {
+                font-size: 9pt;
               }
+              &.input-field {
+                text-align: center;
+                font-size: 8pt;
+                height: 9mm;
+              }  
             }
           }
         }
@@ -386,7 +399,7 @@ main {
           }
         }
       }
-      #qualifications {
+      .qualifications {
         .qualifications-line {
           width: 148mm;
           height: 7.3mm;
@@ -415,14 +428,14 @@ main {
           }
         }
       }
-      #motivation{
+      .motivation{
         display: grid;
         grid-template-columns: 89mm 29mm 30mm;
         grid-template-rows: repeat(3, 14.6mm);
         .label {
           font-size: 10pt;
         }
-        #self-promotion {
+        .self-promotion {
           grid-row: 1 / 4;
           grid-column: 1 / 2;
           border: {
@@ -430,8 +443,14 @@ main {
             bottom: $print-line-default;
             left: $print-line-bold;
           }
+          p {
+            &.input-field{
+              padding: 1mm;
+              height: 40mm;
+            }
+          }
         }
-        #commuting-time {
+        .commuting-time {
           grid-row: 1 / 2;
           grid-column: 2 / 4;
           border: {
@@ -439,7 +458,7 @@ main {
             bottom: $print-line-default;
           }
         }
-        #dependents{
+        .dependents{
           grid-row: 2 / 3;
           grid-column: 2 / 4;
           border: {
